--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ document.addEventListener('DOMContentLoaded', () => {
       const lang=document.documentElement.lang||'uk';
       const d=I18N[lang];
       const desc= lang==='en'? p.desc_en : p.desc_uk;
-      \1lbCalcOverall(p)\3
+      const pct=lbCalcOverall(p);
       const fundraising = p.status==='fundraising' && (p.goal>0);
       const raisedLabel = fundraising ? `${d.raised_prefix} ${formatUA(p.raised||0)}₴ \\ ${formatUA(p.goal||0)}₴` : null;
       const label = (p.cta?.label_uk && lang==='uk')? p.cta.label_uk : (p.cta?.label_en && lang==='en')? p.cta.label_en : (lang==='uk'? d.btn_download : 'Download');
@@ -630,20 +630,7 @@ document.addEventListener('DOMContentLoaded', () => {
       if (sa) sa.textContent=avg+'%';
       if (se) se.textContent=ea;
     }
-    
-
-// --- Auto overall progress calculator ---
-window.lbCalcOverall = function(p){
-  function clamp(n){ n = Math.round(Number(n)||0); if(n<0) return 0; if(n>100) return 100; return n; }
-  if (p && p.status === 'fundraising') return clamp(p.progress||0);
-  var hasParts = (p && (typeof p.progress_text==='number' || typeof p.progress_textures==='number' || typeof p.progress_fonts==='number'));
-  if (!hasParts) return clamp(p && p.progress);
-  var t = clamp(p.progress_text), x = clamp(p.progress_textures), f = clamp(p.progress_fonts);
-  var Wt = 0.70, Wx = 0.25, Wf = 0.05; // edit weights here if needed
-  return clamp(t*Wt + x*Wx + f*Wf);
-};
-
-function renderProjects(list){
+    function renderProjects(list){
       const grid=document.getElementById('projectsGrid'); if (!grid) return;
       grid.innerHTML=list.map(projectCard).join('');
       requestAnimationFrame(()=>{
@@ -1008,6 +995,21 @@ if ('serviceWorker' in navigator) {
            +   '<span class="pct">'+it.val+'%</span>'
            + '</div>';
     }).join('');
+  };
+})();
+</script>
+
+
+<script>
+(function(){
+  window.lbCalcOverall = function(p){
+    function clamp(n){ n = Math.round(Number(n)||0); if(n<0) return 0; if(n>100) return 100; return n; }
+    if (p && p.status === 'fundraising') return clamp(p.progress||0);
+    var hasParts = (p && (typeof p.progress_text==='number' || typeof p.progress_textures==='number' || typeof p.progress_fonts==='number'));
+    if (!hasParts) return clamp(p && p.progress);
+    var t = clamp(p.progress_text), x = clamp(p.progress_textures), f = clamp(p.progress_fonts);
+    var Wt = 0.70, Wx = 0.25, Wf = 0.05;
+    return clamp(t*Wt + x*Wx + f*Wf);
   };
 })();
 </script>
