--- a/index.html
+++ b/index.html
@@ -594,23 +594,11 @@ document.addEventListener('DOMContentLoaded', () => {
       const pct=jsonOverall(p);
       const fundraising = p.status==='fundraising' && (p.goal>0);
       const raisedLabel = fundraising ? `${d.raised_prefix} ${formatUA(p.raised||0)}₴ \\ ${formatUA(p.goal||0)}₴` : null;
-      
-const d = I18N[lang];
-let label = (p.cta?.label_uk && lang==='uk') ? p.cta.label_uk
-          : (p.cta?.label_en && lang==='en') ? p.cta.label_en
-          : (lang==='en' ? (d.btn_download||'Download') : (d.btn_download||'Завантажити'));
-let href = p.cta?.url || '#';
-let attrs = (p.cta?.type==='disabled') ? 'aria-disabled="true" tabindex="-1"' : 'target="_blank" rel="noopener"';
-
-// Early access: override label (and optionally URL)
-if (p.status === 'early-access'){
-  label = (lang==='en' ? (d.btn_for_sponsors||'For Sponsors') : (d.btn_for_sponsors||'Для спонсорів'));
-  href = '#support';
-  attrs = 'target="_blank" rel="noopener"';
-}
-
-// Fundraising: keep default label/url (or p.cta), we only show raisedLabel above
-return `
+      const label = (p.cta?.label_uk && lang==='uk')? p.cta.label_uk : (p.cta?.label_en && lang==='en')? p.cta.label_en : (lang==='uk'? d.btn_download : 'Download');
+      const cls = ['btn']; if (p.cta?.primary) cls.push('primary'); if (p.cta?.animated) cls.push('download-anim'); if (p.cta?.type==='disabled') cls.push('disabled');
+      const href = p.cta?.url || '#';
+      const attrs = (p.cta?.type==='disabled') ? 'aria-disabled="true" tabindex="-1"' : 'target="_blank" rel="noopener"';
+      return `
         <article class="card glass" data-id="${p.id}" data-status="${p.status}" data-title="${p.title}">
           <div class="thumb" role="button" aria-label="Відкрити подробиці проєкту">
             <img src="${p.cover}" data-role="cover" loading="lazy" alt="" aria-hidden="true">
@@ -623,7 +611,7 @@ return `
             <p>${desc}</p>
             <div class="progress" title="${(lang==='en'?'Progress':'Готовність')} ${pct}%"><span style="width:${pct}%"></span></div>
             ${fundraising ? `<small style="color:var(--muted)">${raisedLabel}</small>` : `<small style="color:var(--muted)">${(lang==='en'?'Progress:':'Готовність:')} <strong>${pct}%</strong></small>`}
-            <div class="cta"><a class="${cls.join(' ')}" href="${href}" ${attrs}>${label}</a></div>
+            <div class="cta"><a class="${cls.join(' ')}" href="${p.status==='early-access' ? '#support' : href}" ${attrs}>${p.status==='early-access' ? (lang==='en' ? (I18N.en.btn_for_sponsors||'For Sponsors') : (I18N.uk.btn_for_sponsors||'Для спонсорів')) : label}</a></div>
           </div>
         </article>`;
     }
@@ -1044,16 +1032,6 @@ if ('serviceWorker' in navigator) {
       return Math.min.apply(null, vals);
     };
   }
-})();
-</script>
-
-
-<script>
-(function(){
-  try{
-    if (window.I18N && I18N.uk){ I18N.uk.btn_for_sponsors = 'Для спонсорів'; }
-    if (window.I18N && I18N.en){ I18N.en.btn_for_sponsors = 'For Sponsors'; }
-  }catch(e){}
 })();
 </script>
 
