--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     .steam-link svg{ width:18px; height:18px; display:block; fill:currentColor }
     .modal__body{ padding:12px; overflow:auto; display:grid; gap:12px }
     /* Readiness grid */
-    .readiness-grid{ display:grid; grid-template-columns: repeat(2, 1fr); gap:12px }
+    .readiness-grid{ display:grid; grid-template-columns: 1fr; gap:12px }
     @media (max-width:560px){ .readiness-grid{ grid-template-columns: 1fr } }
     .readiness-item{ padding:12px; border:1px solid var(--brd); border-radius:12px; background:rgba(255,255,255,.05); }
     .readiness-item .row{ display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:8px }
