--- a/index.html
+++ b/index.html
@@ -476,6 +476,11 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Микита</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Мирослав Сеник</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Andryxa</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Богдан Городюк</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Дмитро С.</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Andrii Kravchenko</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Вова ЇЖ</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Dima Feyleg</span>
 		  
         </div>
       </div>
