--- a/index.html
+++ b/index.html
@@ -293,6 +293,45 @@ document.addEventListener('DOMContentLoaded', () => {
   height: 1em; width: auto; vertical-align: -0.15em;
 }
 </style>
+
+<style>
+
+/* === Dispatch: яскрава помаранчева кнопка «Завантажити» === */
+.card[data-id="dispatch"] .cta .btn{
+  position: relative;
+  background: linear-gradient(135deg, rgba(245,158,11,.32), rgba(234,88,12,.45)); /* amber → orange */
+  border-color: color-mix(in srgb, #f59e0b, #ffffff 40%);
+  animation: lb-pulseGlow-amber 3.6s ease-in-out infinite;
+  will-change: transform, box-shadow;
+}
+.card[data-id="dispatch"] .cta .btn:hover{
+  transform: translateY(-2px) scale(1.02);
+  border-color: color-mix(in srgb, #f59e0b, #ffffff 55%);
+}
+
+/* «Проблиск» поверх кнопки (локально для Dispatch) */
+.card[data-id="dispatch"] .cta .btn::after{
+  content:"";
+  position:absolute; top:0; bottom:0; left:-160%; width:140%;
+  transform: skewX(-20deg);
+  background: linear-gradient(120deg, rgba(255,255,255,0) 35%, rgba(255,255,255,.35) 50%, rgba(255,255,255,0) 65%);
+  animation: lb-sweep 3.2s ease-in-out infinite;
+  pointer-events:none; mix-blend-mode: screen;
+}
+
+/* Амберове «дихаюче» сяйво */
+@keyframes lb-pulseGlow-amber{
+  0%,100%{ box-shadow: 0 0 0 1px rgba(245,158,11,.65), 0 0 0 0 rgba(245,158,11,0), 0 10px 28px rgba(2,6,23,.30); }
+  50%{    box-shadow: 0 0 0 1px rgba(245,158,11,.95), 0 0 22px 8px rgba(245,158,11,.24), 0 14px 34px rgba(2,6,23,.45); }
+}
+
+/* Поважаємо налаштування зменшення анімацій */
+@media (prefers-reduced-motion: reduce){
+  .card[data-id="dispatch"] .cta .btn{ animation:none }
+  .card[data-id="dispatch"] .cta .btn::after{ animation:none }
+}
+
+</style>
 </head>
 <body>
   <div class="bg">
