--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     .btn.download-anim:hover{ transform: translateY(-2px) scale(1.02); }
     .btn.download-anim::after{ content:""; position:absolute; top:0; bottom:0; left:-160%; width:140%; transform: skewX(-20deg);
       background: linear-gradient(120deg, rgba(255,255,255,0) 35%, rgba(255,255,255,.35) 50%, rgba(255,255,255,0) 65%);
-      animation: lb-sweep 3.2s ease-in-out infinite; pointer-events:none; mix-blend-mode: screen; }
+      animation: sweep 3.2s ease-in-out infinite; /* reuse existing keyframes */ pointer-events:none; mix-blend-mode: screen; }
     @keyframes lb-pulseGlow{
       0%,100%{ box-shadow: 0 0 0 1px rgba(167,139,250,.65), 0 0 0 0 rgba(125,211,252,0), 0 10px 28px rgba(2,6,23,.30); }
       50%{ box-shadow: 0 0 0 1px rgba(167,139,250,.95), 0 0 24px 10px rgba(125,211,252,.16), 0 14px 34px rgba(2,6,23,.45); }
@@ -299,6 +299,7 @@ document.addEventListener('DOMContentLoaded', () => {
 /* === Dispatch: яскрава помаранчева кнопка «Завантажити» === */
 .card[data-id="dispatch"] .cta .btn{
   position: relative;
+  overflow: hidden; /* clip sheen to rounded button */
   background: linear-gradient(135deg, rgba(245,158,11,.32), rgba(234,88,12,.45)); /* amber → orange */
   border-color: color-mix(in srgb, #f59e0b, #ffffff 40%);
   animation: lb-pulseGlow-amber 3.6s ease-in-out infinite;
@@ -312,10 +313,11 @@ document.addEventListener('DOMContentLoaded', () => {
 /* «Проблиск» поверх кнопки (локально для Dispatch) */
 .card[data-id="dispatch"] .cta .btn::after{
   content:"";
-  position:absolute; top:0; bottom:0; left:-160%; width:140%;
+  position:absolute; top:0; bottom:0; left:-120%; width:120%;
+  border-radius: inherit;
   transform: skewX(-20deg);
   background: linear-gradient(120deg, rgba(255,255,255,0) 35%, rgba(255,255,255,.35) 50%, rgba(255,255,255,0) 65%);
-  animation: lb-sweep 3.2s ease-in-out infinite;
+  animation: sweep 3.2s ease-in-out infinite; /* reuse existing keyframes */
   pointer-events:none; mix-blend-mode: screen;
 }
 
