--- a/index.html
+++ b/index.html
@@ -522,6 +522,8 @@ document.addEventListener('DOMContentLoaded', () => {
 		  <span aria-disabled="true" tabindex="-1" class="chip">Andrii Kravchenko</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Вова ЇЖ</span>
 		  <span aria-disabled="true" tabindex="-1" class="chip">Dima Feyleg</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">Дмитро</span>
+		  <span aria-disabled="true" tabindex="-1" class="chip">офіцерППО</span>
 		  
         </div>
       </div>
